--- a/blogs/tec/202112/消息系统设计与实现「上篇」.md
+++ b/blogs/tec/202112/消息系统设计与实现「上篇」.md
@@ -176,3 +176,5 @@ subscribReason = 发布，对应着 actions = [评论]
   getUserNotify(get announce | remind | message | all)
 - 用户阅读消息
   read
+
+## 该文章属于转载，如有需要请访问：[zealsay](https://www.zealsay.com/)
