--- a/blogs/tec/202112/消息系统设计与实现「下篇」.md
+++ b/blogs/tec/202112/消息系统设计与实现「下篇」.md
@@ -223,3 +223,5 @@ defaultSubscriptionConfig: {
 ![79702859cd50888877d67.jpg](https://pan.zealsay.com/20190706164023661000000.jpg)
 信息的创建，只需要直接调用`NotifyService.createMessage`方法就可以了，
 在下一次用户查询消息队列的时候，就会查询这条信息。
+
+## 该文章属于转载，如有需要请访问：[zealsay](https://www.zealsay.com/)
